@@ -118,9 +118,9 @@ $custom = $Tools->fetch_custom_fields('vaults');
 		# all my fields
 		foreach($custom as $field) {
     		// create input > result is array (required, input(html), timepicker_index)
-    		$custom_input = $Tools->create_custom_field_input ($field, $vault, $_POST['action'], $timepicker_index);
+    		$custom_input = $Tools->create_custom_field_input ($field, $vault, $timepicker_index);
     		// add datepicker index
-    		$timepicker_index = $timepicker_index++;
+    		$timepicker_index++;
             // print
 			print "<tr>";
 			print "	<td>".ucwords($Tools->print_custom_field_name ($field['name']))." ".$custom_input['required']."</td>";
